# nfr-review

./: .dockerignore  .gitignore  .gitleaks.toml  .mailmap  .pre-commit-config.yaml  .trivyignore  .venv  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_TASKS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE.md  Dockerfile  LICENSE  MANIFEST.in  NOTICE  README.md  RULE_FRAMEWORK.md  SECURITY.md  action.yml  hygiene-report.csv  hygiene-report.jsonl  nfr-review.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  skills-lock.json
.agents/skills/graphify-schema/: SKILL.md
.agents/skills/nfr-review-domain/: SKILL.md
.agents/skills/nfr-review-summarization/: SKILL.md
.agents/skills/pydantic-v2/: SKILL.md
.agents/skills/python-conventions/: SKILL.md
.agents/skills/structurizr-dsl/: SKILL.md
.agents/skills/test-data-pii/: SKILL.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy-site.yml  nfr-review-nightly.yml  nfr-review-pr.yml  pages.yml  release.yml
docs/: continuous-compliance.md  custom-rules.md  dependencies.md  design-change.md  dynamic-analysis.md  experimental-arch.md  experimental-dynamic.md  graphify-guide.md  gsd-is-sketch-bug.md  install.md  monitor-deployment.md  release.md  rule-framework.md  structurizr-dsl.md  uat-pilot-2026-05-04.md  uat-script-M023-S01.md  uat-script-M044.md  uat-script.md
docs/compliance/: dependency-licenses.md
docs/examples/: nfr-review-container.yml  nfr-review-dynamic.yml  nfr-review-nightly.yml  nfr-review-pr.yml
docs/internal/: adoption-readiness-review.md  feedback-cpp-and-license-norms.md  milestone-brief-scancode.md  uat-pilot-2026-05-04-post-kustomize.md  uat-script-M022.md  uat-script-M044.md  uat-script-M051.md  uat-script.md
docs/research/: gsd-automode-tool-scoping-bug.md  mvp-implementation-plan.txt  nfr-review-category-guide.txt  nfr_design_review_briefing .md  nfr_design_review_briefing .txt  non-functional-design-review-findings-matrix-template.csv  stack-specific-addendum.md  stack-specific-addendum.txt
docs/research/patching/: exception-register.md  patching-readiness-guardrails.md  patching-telemetry-standard.md  ring-promotion-runbook.md  rollback-rehearsal-template.md
scripts/: action_comment.py  action_issues.py  cleanup-regression-repos.sh  generate_catalogue.py  install_skills.py  lint_docs.py  refresh_snapshots.py  setup-all.sh  setup.sh
site/: astro.config.mjs  package-lock.json  package.json
site/src/components/: CodeSnippet.astro  (+4 more)
src/nfr_review/: __init__.py  _payload_registry.py  arch-report-schema.json  arch_diagrams.py  arch_discovery.py  arch_domain_model.py  arch_integ_build.py  arch_integ_compose.py  arch_integ_config.py  arch_integ_grpc.py  arch_integ_k8s.py  arch_integ_manifest.py  arch_integrations.py  arch_market_comparison.py  arch_models.py  arch_orchestrator.py  arch_recommendations.py  arch_report_render.py  arch_risk_analysis.py  arch_test_coverage.py  arch_utils.py  auditability.py  baseline.py  capabilities.py  cli.py  collector_manager.py  compliance_mapping.py  config.py  dep_solver.py  deps_analysis.py  deps_dev_client.py  detect.py  engine.py  experimental_models.py  experimental_orchestrator.py  graph_query.py  issues.py  llm_client.py  mcp_client.py  models.py  (+12 more)
tests/: conftest.py  test_action_comment.py  test_action_issues.py  test_adr_ci_rules.py  test_adr_collector.py  test_adr_derive_collector.py  test_adr_drift_rule.py  test_adr_gap_rule.py  test_all_cmd.py  test_apim_collector.py  test_apim_rules.py  test_arch_baseline.py  test_arch_diagrams.py  test_arch_discovery.py  test_arch_domain_model.py  test_arch_drum_validation.py  test_arch_integ_manifest.py  test_arch_integrations.py  test_arch_market_comparison.py  test_arch_models.py  test_arch_orchestrator.py  test_arch_recommendations.py  test_arch_report_render.py  test_arch_risk_analysis.py  test_arch_test_coverage.py  test_ast_common_collector.py  test_ast_common_rules.py  test_auditability.py  test_baseline.py  test_baseline_cli.py  test_baseline_diff_cli.py  test_baseline_shift_e2e.py  test_build_readiness_cpp.py  test_capabilities.py  test_catalogue_gen.py  test_ci_collector.py  test_ci_cpp.py  test_ci_ctest_detection.py  test_classify.py  test_cli.py  (+187 more)
tests/fixtures/: rule_catalogue_sample.json
tests/fixtures/cmake-bad-repo/: CMakeLists.txt
tests/fixtures/cmake-consumer-a/: CMakeLists.txt
tests/fixtures/cmake-consumer-b/: CMakeLists.txt
tests/fixtures/cmake-ctest-repo/: CMakeLists.txt
tests/fixtures/cmake-ctest-repo/.github/workflows/: ci.yml
tests/fixtures/cmake-ctest-repo/src/: main.cpp
tests/fixtures/cmake-fetchcontent-repo/: CMakeLists.txt
tests/fixtures/cmake-good-repo/: CMakeLists.txt
tests/fixtures/cpp-integration-repo/: .clang-tidy  CMakeLists.txt  README.md
tests/fixtures/cpp-integration-repo/.github/workflows/: ci.yml
tests/fixtures/cpp-integration-repo/include/: legacy.h  widget.h
tests/fixtures/cpp-integration-repo/src/: main.cpp
tests/fixtures/hygiene-clean-repo/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
tests/fixtures/hygiene-clean-repo/.github/workflows/: ci.yml  release.yml
tests/fixtures/hygiene-clean-repo/docs/: index.md
tests/fixtures/hygiene-clean-repo/src/: __init__.py
tests/fixtures/hygiene-clean-repo/src/clean_example/: __init__.py
tests/fixtures/license-clean-repo/: LICENSE  NOTICE  pyproject.toml
tests/fixtures/license-clean-repo/src/: clean_module.py
tests/fixtures/license-dirty-repo/: LICENSE  pyproject.toml
tests/fixtures/license-dirty-repo/src/: gpl_module.py  no_header.py
tests/monitor/: conftest.py  harness.py  test_engine.py  test_harness.py  test_load.py  test_monitor_cli.py  test_monitor_integration.py  test_receiver.py  test_resilience.py  test_resilience_e2e.py  test_scenarios.py  test_testapp.py  test_trace_factory.py  test_window.py  trace_factory.py
tests/regression/: conftest.py  manifest.yaml  test_diagram_rendering.py  test_dsl_snapshots.py  test_graphify_selfscan.py  test_snapshots.py
tests/testapp/: __init__.py  app.py
(+585 files in other folders)
