[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfr-review"
version = "0.1.0"
description = "Automated non-functional requirements review of Java/Spring Boot microservice repositories"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "nfr-review contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2",
    "ruamel.yaml>=0.18",
    "anthropic>=0.40",
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=0.9,!=1.6.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
nfr-review = "nfr_review.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 95
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.bandit]
# B101 flags `assert` statements. Production code uses 3 defensive asserts for
# invariants that indicate programming errors (engine.py, ast_bare_except.py,
# ast_logging_stdout.py). Removing these would reduce safety. The test suite
# uses assert extensively (65+ files). Skip is intentional.
skips = ["B101"]

[tool.mypy]
packages = ["nfr_review"]

[[tool.mypy.overrides]]
module = ["ruamel.*", "tree_sitter_language_pack.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "regression: clones public repos and diffs output against snapshot baselines (requires network)",
]
