[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfr-review"
version = "0.1.0"
description = "Automated non-functional requirements review for polyglot codebases"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "nfr-review contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2",
    "ruamel.yaml>=0.18",
    "tree-sitter>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-hcl>=1.1",
    "tree-sitter-dockerfile>=0.2",
    "tree-sitter-c-sharp>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-cpp>=0.23",
    "packaging>=24.0",
    "resolvelib>=1.0",
]

[project.urls]
Repository = "https://github.com/JimAKennedy/nfr-review"
Documentation = "https://github.com/JimAKennedy/nfr-review#readme"
Issues = "https://github.com/JimAKennedy/nfr-review/issues"
Changelog = "https://github.com/JimAKennedy/nfr-review/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.2",
    "pytest-xdist>=3.5",
    "filelock>=3.12",
    "ruff>=0.6",
    "anthropic>=0.40",
    "build>=1.0",
]
diagrams = [
    "graphviz>=0.20",
]
pdf = [
    "weasyprint>=60",
]
llm-anthropic = [
    "anthropic>=0.40",
]
llm-openai = [
    "openai>=1.0",
]
scancode = [
    "scancode-toolkit>=32.0,<34",
    "typecode-libmagic>=5.39",
    "extractcode-libarchive>=3.5",
]

[project.scripts]
nfr-review = "nfr_review.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nfr_review = ["py.typed"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 95
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.bandit]
# B101 flags `assert` statements. Production code uses 3 defensive asserts for
# invariants that indicate programming errors (engine.py, ast_bare_except.py,
# ast_logging_stdout.py). Removing these would reduce safety. The test suite
# uses assert extensively (65+ files). Skip is intentional.
skips = ["B101"]

[tool.mypy]
packages = ["nfr_review"]

[[tool.mypy.overrides]]
module = [
    "ruamel.*",
    "tree_sitter_java.*",
    "tree_sitter_python.*",
    "tree_sitter_go.*",
    "tree_sitter_hcl.*",
    "tree_sitter_dockerfile.*",
    "tree_sitter_c_sharp.*",
    "tree_sitter_typescript.*",
    "tree_sitter_cpp.*",
    "scancode.*",
    "openai.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
markers = [
    "regression: clones public repos and diffs output against snapshot baselines (requires network)",
    "slow: full analysis pass on the repo (may hit network for dep resolution)",
]
